[metadata]
name = pytekdatamuse
version = attr: tekdatamuse.__version__
license = GPLv3
author = Tralah M Brian
maintainer = Tralah M Brian
author_email = musyoki.brian@tralahtek.com
maintainer_email = musyoki.brian@tralahtek.com
description= "Unofficial Python Wrapper for the Datamuse API."
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/TralahM/pytekdatamuse
licence_files = LICENSE


classifiers=
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 4 - Beta

    # Indicate who your project is intended for
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Database
    Topic :: Software Development :: Libraries
    Topic :: System :: Shells
    Topic :: Utilities
    # Pick your license as you wish (should match "license" above)
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: Unix

keywords= development,credit_cards,database,finance
[project_url]
Source= "https://github.com/TralahM/pytekdatamuse/"
Tracker= "https://github.com/TralahM/pytekdatamuse/issues"
Funding= "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=WFKVHBRCYEE6S&source=url"


[options]
include_package_data = true
packages = find:

install_requires=
    pyyaml

[options.entry_points]
console_scripts =
    tekdatamuse = tekdatamuse.commands:main
